--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "node": "14.x"
   },
   "scripts": {
-    "start": "node src",
-    "dev": "nodemon src"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
